--- a/hands-on-machine-learning-with-scikit-learn-keras-and-tensorflow/4-training-models/05_softnax_regression_implementation_with_batch_gradient_descent.ipynb
+++ b/hands-on-machine-learning-with-scikit-learn-keras-and-tensorflow/4-training-models/05_softnax_regression_implementation_with_batch_gradient_descent.ipynb
@@ -6,7 +6,7 @@
       "name": "05-softnax-regression-implementation-with-batch-gradient-descent.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN700SUwvETMVAEJ34SGVFX",
+      "authorship_tag": "ABX9TyOfDh9amxcEX21boiuECGe1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,7 +114,7 @@
       ],
       "metadata": {
         "id": "buoYQk47X2N5",
-        "outputId": "8b714362-2e77-4eb7-addf-c9779974019d",
+        "outputId": "b387f957-a6ae-4596-857a-0ee8263d19cf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -169,7 +169,7 @@
       ],
       "metadata": {
         "id": "H-vaWRvFYj2n",
-        "outputId": "64d02cc3-e9b2-40c4-ee56-e811bb5e659a",
+        "outputId": "6242e0e6-fa91-48b9-cc58-96e44ec9038c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -226,33 +226,154 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "test_ratio = 0.2\n",
+        "validation_ratio = 0.2\n",
+        "total_size = len(X_with_bias)\n",
+        "\n",
+        "test_size = int(total_size * test_ratio)\n",
+        "validation_size = int(test_size * validation_ratio)\n",
+        "train_size = total_size - test_size - validation_size\n",
+        "\n",
+        "rnd_indices = np.random.permutation(total_size)\n",
+        "\n",
+        "x_train = X_with_bias[rnd_indices[: train_size]]\n",
+        "y_train = y[rnd_indices[: train_size]]\n",
+        "\n",
+        "x_valid = X_with_bias[rnd_indices[train_size: - test_size]]\n",
+        "y_valid = y[rnd_indices[train_size: - test_size]]\n",
+        "\n",
+        "x_test = X_with_bias[rnd_indices[-test_size:]]\n",
+        "y_test = y[rnd_indices[-test_size:]]"
       ],
       "metadata": {
-        "id": "Pauq62yHZcN4",
-        "outputId": "e7ba5aad-9fad-4bae-d69c-cd25e3c73733",
+        "id": "Pauq62yHZcN4"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The targets are currently class indices (0, 1 or 2), but we need target class probabilities to train the Softmax Regression model. Each instance will have target class probabilities equal to 0.0 for all classes except for the target class which will have a probability of 1.0 (in other words, the vector of class probabilities for ay given instance is a one-hot vector). \n",
+        "\n",
+        "Let's write a small function to convert the vector of class indices into a matrix containing a one-hot vector for each instance:"
+      ],
+      "metadata": {
+        "id": "tNtwwT5jGOyA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def to_one_hot(y):\n",
+        "  n_classes = y.max() + 1\n",
+        "  m = len(y)\n",
+        "  y_one_hot = np.zeros((m, n_classes))\n",
+        "  y_one_hot[np.arange(m), y] = 1\n",
+        "  return y_one_hot"
+      ],
+      "metadata": {
+        "id": "FjyJL8_UGQZo"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's test this function on the first 10 instances:"
+      ],
+      "metadata": {
+        "id": "_HBy3uHAG2Ji"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_train[:10]"
+      ],
+      "metadata": {
+        "id": "Lf7-Bi_jG2jI",
+        "outputId": "e8d7f55f-a50e-4589-ede2-f1d01928893a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([1.66066066])"
+              "array([0, 1, 2, 1, 1, 0, 1, 1, 1, 0])"
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "to_one_hot(y_train[:10])"
+      ],
+      "metadata": {
+        "id": "F3W1oMh1G8Al",
+        "outputId": "bf899553-5c65-46e6-d8d2-e9bba12fb400",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1., 0., 0.],\n",
+              "       [0., 1., 0.],\n",
+              "       [0., 0., 1.],\n",
+              "       [0., 1., 0.],\n",
+              "       [0., 1., 0.],\n",
+              "       [1., 0., 0.],\n",
+              "       [0., 1., 0.],\n",
+              "       [0., 1., 0.],\n",
+              "       [0., 1., 0.],\n",
+              "       [1., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "##Softmax Regression"
+        "Looks good, so let's create the target class probabilities matrix for the training set and the test set:"
+      ],
+      "metadata": {
+        "id": "7r7edp3UHatk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_train_one_hot = to_one_hot(y_train)\n",
+        "y_valid_one_hot = to_one_hot(y_valid)\n",
+        "y_test_one_hot = to_one_hot(y_test)"
+      ],
+      "metadata": {
+        "id": "PkK-ng15HbIh"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Softmax function"
       ],
       "metadata": {
         "id": "6xZxIqWIaICd"
@@ -261,79 +382,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The Logistic Regression model can be generalized to support multiple classes directly,\n",
-        "without having to train and combine multiple binary classifiers.This is called Softmax Regression, or Multinomial Logistic Regression.\n",
+        "Now let's implement the Softmax function. Recall that it is defined by the following equation:\n",
         "\n",
-        "The idea is simple: when given an instance $x$, the Softmax Regression model first\n",
-        "computes a score $s_k(x)$ for each class k, then estimates the probability of each class by\n",
-        "applying the softmax function (also called the normalized exponential) to the scores.\n",
-        "\n",
-        "$\n",
-        "s_k(\\mathbf{x}) = ({\\boldsymbol{\\theta}^{(k)}})^T \\mathbf{x}\n",
-        "$\n",
-        "\n",
-        "Note that each class has its own dedicated parameter vector $\\theta^{(k)}$. All these vectors are\n",
-        "typically stored as rows in a parameter matrix Θ.\n",
-        "\n",
-        "Once you have computed the score of every class for the instance $x$, you can estimate\n",
-        "the probability $\\hat p_k$ that the instance belongs to class k by running the scores through\n",
-        "the softmax function.\n",
-        "\n",
-        "The function computes the exponential of\n",
-        "every score, then normalizes them (dividing by the sum of all the exponentials). The\n",
-        "scores are generally called logits or log-odds (although they are actually unnormalized\n",
-        "log-odds).\n",
-        "\n",
-        "$\n",
-        "\\hat{p}_k = \\sigma\\left(\\mathbf{s}(\\mathbf{x})\\right)_k = \\dfrac{\\exp\\left(s_k(\\mathbf{x})\\right)}{\\sum\\limits_{j=1}^{K}{\\exp\\left(s_j(\\mathbf{x})\\right)}}\n",
-        "$\n",
-        "\n",
-        "Just like the Logistic Regression classifier, the Softmax Regression classifier predicts\n",
-        "the class with the highest estimated probability (which is simply the class with the\n",
-        "highest score).\n",
-        "\n",
-        "$\n",
-        "\\hat{y} = \\underset{k}{\\operatorname{argmax}} \\, \\sigma\\left(\\mathbf{s}(\\mathbf{x})\\right)_k = \\underset{k}{\\operatorname{argmax}} \\, s_k(\\mathbf{x}) = \\underset{k}{\\operatorname{argmax}} \\, \\left( ({\\boldsymbol{\\theta}^{(k)}})^T \\mathbf{x} \\right)\n",
-        "$\n",
-        "\n",
-        "The Softmax Regression classifier predicts only one class at a time\n",
-        "(i.e., it is multiclass, not multioutput), so it should be used only\n",
-        "with mutually exclusive classes, such as different types of plants.\n",
-        "You cannot use it to recognize multiple people in one picture.\n",
-        "\n",
-        "Now that you know how the model estimates probabilities and makes predictions,\n",
-        "let’s take a look at training. The objective is to have a model that estimates a high\n",
-        "probability for the target class (and consequently a low probability for the other\n",
-        "classes). Minimizing the cost function called the cross\n",
-        "entropy, should lead to this objective because it penalizes the model when it estimates\n",
-        "a low probability for a target class.\n",
-        "\n",
-        "Cross entropy is frequently used to measure how\n",
-        "well a set of estimated class probabilities matches the target classes.\n",
-        "\n",
-        "$\n",
-        "J(\\boldsymbol{\\Theta}) = - \\dfrac{1}{m}\\sum\\limits_{i=1}^{m}\\sum\\limits_{k=1}^{K}{y_k^{(i)}\\log\\left(\\hat{p}_k^{(i)}\\right)}\n",
-        "$\n",
-        "\n",
-        "Notice that when there are just two classes $(K = 2)$, this cost function is equivalent to the Logistic Regression’s cost function.\n",
-        "\n",
-        "The gradient vector of this cost function with regard to $\\theta^{(k)}$ is given.\n",
-        "\n",
-        "$\n",
-        "\\nabla_{\\boldsymbol{\\theta}^{(k)}} \\, J(\\boldsymbol{\\Theta}) = \\dfrac{1}{m} \\sum\\limits_{i=1}^{m}{ \\left ( \\hat{p}^{(i)}_k - y_k^{(i)} \\right ) \\mathbf{x}^{(i)}}\n",
-        "$\n",
-        "\n",
-        "Now you can compute the gradient vector for every class, then use Gradient Descent\n",
-        "(or any other optimization algorithm) to find the parameter matrix Θ that minimizes\n",
-        "the cost function.\n",
-        "\n",
-        "\n",
-        "Let’s use Softmax Regression to classify the iris flowers into all three classes. Scikit-\n",
-        "Learn’s `LogisticRegression` uses one-versus-the-rest by default when you train it on\n",
-        "more than two classes, but you can set the `multi_class` hyperparameter to \"multino\n",
-        "mial\" to switch it to Softmax Regression. You must also specify a solver that supports\n",
-        "Softmax Regression, such as the \"lbfgs\" solver.It also applies $L_2$ regularization by default, which you can control using\n",
-        "the hyperparameter C:"
+        "$\\sigma\\left(\\mathbf{s}(\\mathbf{x})\\right)_k = \\dfrac{\\exp\\left(s_k(\\mathbf{x})\\right)}{\\sum\\limits_{j=1}^{K}{\\exp\\left(s_j(\\mathbf{x})\\right)}}$"
       ],
       "metadata": {
         "id": "9AMO-EHBaLWx"
@@ -342,8 +393,7 @@
     {
       "cell_type": "code",
       "source": [
-        "X = iris[\"data\"][:, (2, 3)]  # petal length, petal width\n",
-        "y = iris[\"target\"]"
+        ""
       ],
       "metadata": {
         "id": "PtaycBhuV5RL"
@@ -354,8 +404,7 @@
     {
       "cell_type": "code",
       "source": [
-        "softmax_reg = LogisticRegression(multi_class=\"multinomial\" ,solver=\"lbfgs\", C=10, random_state=42)\n",
-        "softmax_reg.fit(X, y)"
+        ""
       ],
       "metadata": {
         "id": "mjl48OGSWEHI",
@@ -377,17 +426,6 @@
           "execution_count": 16
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "So the next time you find an iris with petals that are 5 cm long and 2 cm wide, you\n",
-        "can ask your model to tell you what type of iris it is, and it will answer Iris virginica\n",
-        "(class 2) with 94.2% probability (or Iris versicolor with 5.8% probability):"
-      ],
-      "metadata": {
-        "id": "gphNU0Q2YP00"
-      }
     },
     {
       "cell_type": "code",
